--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   </head>
   <body ng-app="directoryApp">
     <div class="container">
-      <div class="row">
+      <div class="row" id="title">
         <h1>UF Directory App</h1>
       </div>
       <div class="row" ng-controller="ListingsController">
