--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
         <h1>UF Directory App</h1>
       </div>
       <div class="row" ng-controller="ListingsController">
-        <div class="col-md-6">
+        <div class="col-md-6" id="tableSection">
           <div class="input-group" id="searchBar">
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
             <input type="text" class="form-control" placeholder="Search" ng-model="query">
@@ -18,9 +18,9 @@
           <div class="tableWrapper">
             <table class="table table-striped table-hover">
               <tr>
-                <th>Code</th>
-                <th>Building Name</th>
-                <th></th>
+                <th id="tableHeading">Code</th>
+                <th id="tableHeading">Building Name</th>
+                <th id="tableHeading"></th>
               </tr>
               <tr ng-repeat="listing in listings | filter: query" ng-click="showDetails($index)">
                 <td>{{listing.code}}</td>
@@ -37,7 +37,7 @@
             <button class="btn btn-primary" ng-click="addListing()">Add Listing</button>
           </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" id="detailedInfoSection">
           <div class="jumbotron">
             <h2>Detailed Information</h2>
             <h4>{{detailedInfo.name}}</h4>
